tests/baselines/reference/copyrightWithoutNewLine1.errors.txt
==== tests/cases/compiler/copyrightWithoutNewLine1.ts (2 errors) ====
    /*****************************
    * (c) Copyright - Important
    ****************************/
    import model = require("./greeter")
                           ~~~~~~~~~~~
!!! error TS2307: Cannot find external module './greeter'.
    var el = document.getElementById('content');
             ~~~~~~~~
!!! error TS2304: Cannot find name 'document'.
    var greeter = new model.Greeter(el);
    /** things */
    greeter.start();